# pofd_coverage

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac  configure.in
analyze_coverage/: setup.py
analyze_coverage/analyze_coverage/: __init__.py  analyze_coverage.py  analyze_sims.py  broken_norm.py
analyze_pofd_coverage/: setup.py
analyze_pofd_coverage/analyze_pofd_coverage/: __init__.py  analyze_coverage.py  broken_norm.py
include/: PD.h  PDDouble.h  PDFactory.h  PDFactoryDouble.h  beam.h  doublebeam.h  fftstuff.h  fourierFilter.h  global_settings.h  hipassFilter.h  numberCounts.h  numberCountsDouble.h  pofdExcept.h  positionGenerator.h  ran.h  simImage.h  simImageDouble.h  simManager.h  simManagerDouble.h  utility.h
src/: Makefile.am  PD.cc  PD.h  PDDouble.cc  PDDouble.h  PDFactory.cc  PDFactory.h  PDFactoryDouble.cc  PDFactoryDouble.h  beam.cc  beam.h  doublebeam.cc  fourierFilter.cc  global_settings.h  hipassFilter.cc  numberCounts.cc  numberCounts.h  numberCountsDouble.cc  numberCountsDouble.h  paramSet.cc  paramSet.h  pofdExcept.cc  pofd_coverage_getBeam.cc  pofd_coverage_getPD.cc  pofd_coverage_getR.cc  pofd_coverage_makeCat.cc  pofd_coverage_makeSim.cc  pofd_coverage_runSim.cc  positionGenerator.cc  simImage.cc  simImage.h  simImageDouble.cc  simManager.cc  simManagerDouble.cc  simManagerDouble.h  utility.cc
test/: Makefile.am  model_test.cc
test/testdata/: test1D.txt  test2D.txt  test2D_simple.txt
